--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,26 @@
-.App {
-  text-align: center;
+.user-list {
+  width: 600px;
+	border: 1px black solid;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.user-list tbody tr{
+	border: 1px black solid;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.avatar {
+  max-width: 100px;
 }
 
-.App-link {
-  color: #61dafb;
+.name {
+  padding-left: 10px;
+  max-width: 600px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.summary {
+  padding-left: 10px;
+  max-width: 400px;
+}
+
+.actions {
+  max-width: 100px;
 }
