--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
 .user-list {
   width: 600px;
-	border: 1px black solid;
+  border: 1px black solid;
 }
 
-.user-list tbody tr{
-	border: 1px black solid;
+.user-list tbody tr {
+  border: 1px black solid;
 }
 
 .avatar {
@@ -23,4 +23,17 @@
 
 .actions {
   max-width: 100px;
+}
+
+.AddUserForm {
+  width: 80%;
+  margin: 50px 10%;
+}
+
+.UserFormInput {
+  margin-bottom: 20px;
+}
+
+.UserFormInput > label {
+  display: block;
 }
